feat: Add advanced audio processing and speech-to-text capabilities
- Introduced `AudioProcessor` for format conversion, preprocessing, and chunk handling.
- Added `speechToText` and `speechToTextFromChunks` methods in `ConversationalAI` for transcription.
- Enhanced `SpeechService` to handle explicit audio format specifications.
- Added tests for `AudioProcessor`, `AudioFormat`, and associated functionality.
- Updated `Dockerfile` to include FFmpeg for WebM/Opus decoding.